# tft-perfect-synergies

./: Cargo.toml  README.md  build_all.sh
examples/: champs_1669402544.json  teams_sizes_0_to_3_max_waste_0_1669402544.json  traits_1669402544.json
src/: main.rs
